--- a/madon.html
+++ b/madon.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <title>Document</title>
 <style>
-#content{
-    width: 92%;
-}
+h1,h2,h3,h4,h5{font-weight:600;}
 .sideicon{
     width: 100%; aspect-ratio: 1/1; display: flex; justify-content: center; align-items: center; cursor: pointer;
     background-color: transparent; transition: .4s; border-bottom: 1px solid #ddd;
@@ -22,17 +20,15 @@
     display: none;
 }
 #searcher{display: none;}
-@media (orientation: landscape) {
-    #content{
-        width: 70%;
-    }
-}
+
+.material-symbols-rounded{font-weight: 350;}
+
 </style>
 </head>
-<body style="margin: 0; font-family: 'mayo';">
+<body style="margin: 0; font-family: 'inter';">
 <nav style="box-sizing: border-box;border-bottom: 1px solid #ddd; height: 5dvh; width: 100%; display: flex; position: sticky; top: 0; left:0;background-color: white;">
 <div style="margin: auto auto auto 1rem; height: min-content;font-size: larger;">
-<span id="hero" style="font-weight: bold;">SKALOVIQ</span>
+<span id="hero" style="font-weight: bold;">LINGYUOHZ</span>
 <form id='searcher' style="">
     <input type="text" placeholder="Hit enter to search.." name="search" style="outline: none; border: none;font-family: inherit; width: 90dvw;">
   </form>
@@ -40,7 +36,7 @@
 </nav>
 
 <div id="wrapper" style="display: flex; height: 95dvh; ">
-    <div id="content" style="height: 100%; overflow-y: auto; padding: 1rem; box-sizing: border-box;font-size: larger; position: relative;">
+    <div id="content" style="flex:1; height: 100%; overflow-y: auto; padding: 1rem; box-sizing: border-box;font-size: larger; position: relative;">
         <div id="menu" style="width: 100%; height: 100%; background-color: white; z-index: 999; position: absolute; bottom: 0; left: 0; padding: 1rem; box-sizing: border-box;">
             <a href="#">blog</a><br>
             <a href="#">portfolio</a><br>
@@ -60,20 +56,16 @@
     </div>
 
     
-    <div id="sidebar" style="flex:1; height: 100%;  overflow-y: auto;border-left: 1px solid #ddd; display: flex; flex-direction: column;">
+    <div id="sidebar" style="width: 2rem; height: 100%; box-sizing: border-box; overflow-y: auto;border-left: 1px solid #ddd; display: flex; flex-direction: column;">
         <!-- <div id="menutogg" class="material-symbols-rounded sideicon" onclick="showMenu()">menu</div> -->
         <div class="material-symbols-rounded sideicon" onclick="switcher()">&#xe8b6;</div>
         <div class="material-symbols-rounded sideicon">&#xe88a;</div>
-        <div class="material-symbols-rounded sideicon">&#xe5d8;</div>
-        <div class="material-symbols-rounded sideicon">&#xe5db;</div>
-        <div class="material-symbols-rounded sideicon">&#xe5c4;</div>
-        <div class="material-symbols-rounded sideicon">&#xe627;</div>
+        <div class="material-symbols-rounded sideicon" onclick="content.scrollTo({top:0, behavior: 'smooth'})">&#xe5d8;</div>
+        <div class="material-symbols-rounded sideicon" onclick="content.scrollTo({top:document.body.scrollHeight, behavior:'smooth'});">&#xe5db;</div>
+        <div class="material-symbols-rounded sideicon" onclick="history.back();">&#xe5c4;</div>
+        <div class="material-symbols-rounded sideicon" onclick="window.location.href=window.location.href;">&#xe627;</div>
         <div class="material-symbols-rounded sideicon">&#xeb37;</div>
-
-        <!-- <div id="sideicon" class="material-symbols-rounded"></div>
-        <div id="sideicon" class="material-symbols-rounded"></div>
-        <div id="sideicon" class="material-symbols-rounded"></div> -->
-        <!-- <div id="sideicon" class="material-symbols-rounded" style="margin-top: auto;">&#xe88e;</div> -->
+        <div class="material-symbols-rounded sideicon" style="margin-top: auto; border-top: 1px solid #ddd;">&#xe88e;</div>
         
     </div>
 
