--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-<link rel='stylesheet' href='font.css'>
+<link rel='stylesheet' href='https://xolyn.github.io/font.css'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<link rel='stylesheet' href='https://xolyn.github.io/widgets/widgets.css'>
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
 <!-- https://icons.getbootstrap.com/ -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -74,10 +75,12 @@ tr>td:nth-child(2){
     padding: .5rem 0;
 }
 
-menu.onlymob{
-  right: -100dvw
-}
+hr{ border: .25px solid #ddd}
 
+menu.onlymob{ right: -100dvw }
+details{font-size: x-small;}
+summary{font-size: small !important; padding: 1rem 0;}
+#hero:hover{font-weight: 100;}
 /* swiper */
 .prev,.next{cursor: pointer;}
 .prev::selection,.next::selection{background-color: transparent;}
@@ -121,7 +124,7 @@ ul{margin:0}
 
 <nav style="width: 100%; height: 8dvh; position: fixed; top:0; display: flex; z-index: 999;">
 
-  <h1 style="margin: 0; height: min-content; margin: auto auto auto 1rem; font-size: large; "> LINGYUOHZ </h1>
+  <h1 id="hero" style="transition: font-weight .8s; margin: 0; height: min-content; margin: auto auto auto 1rem; font-size: large; "> LINGYUOHZ </h1>
   <menu class="onlyPC" style="margin: auto 1rem; ">
     <div id="pcmenu" style="display: flex; font-size: larger;">
       <a style="margin: 0 .5rem; font-size: inherit; display: block; width: fit-content;" href="https://xolyn.github.io/blog">blog</a>
@@ -309,10 +312,68 @@ ul{margin:0}
             </tbody>
         </table>
         </div>
-      </div .row>
+    </div .row>
+
+
+    <div class="row">
+        <div class="column sidebar">
+          <h2>FAQ</h2>
+      </div>
+      <div class="column content">
+      <details>
+            <summary class="far narrow">Does this website collect HTTP cookies?</summary>
+            Unfortunately, yes. When you visit our website, cookies data such as your location, device information, 
+            etc may be collcted by our analytics partner Google. We unswervingly recognize the importance of data privacy.
+            Rest assured, this information is solely used for the purpose of website analytics and 
+            enhancing user experience. We are committed to ensuring that your data is handled securely 
+            and will never be disclosed to third parties. 
+            <!-- For more information please check <a href="cookie.html">here</a>. -->
+        </details>
+        <hr>
+        <details>
+            <summary class="far narrow">Why .NET instead of .COM?</summary>
+            The pervasive misappropriation of the ".com" domain for personal websites represents a linguistic and conceptual misunderstanding, 
+                indicative of a lexical disregard for the commercial connotation inherent in this TLD. 
+                The ubiquitous adoption of ".com" for non-commercial pursuits commit a departure from the etymological underpinnings of the abbreviation, 
+                where "com" ostensibly denotes <b>com</b>mercial endeavors. Such lexical transgressions, seems subtle, illuminate the nuanced and evolving nature of language in the virtual epoch, 
+                where lexical boundaries are often porous and subject to the whims of cultural appropriation. I strongly condemn misbehavior of this kind. 
+                <s>Totally not because I didn't manage to snap up the .com website of my name.</s> 
+        </details>
+        <hr>
+        <details>
+            <summary class="far narrow">What are licensing agreements and sharing rules for this website?</summary>
+            You can share by copying and redistributing the content under this second level domain in any medium or format with appropriate credit given.
+            No commercial uses and derivatives of any kind are allowed.
+            All contents are licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0</a>.
+        
+        </details>
+        <hr>
+        <details>
+            <summary class="far narrow">How to use this website?</summary>
+            If possible, link my website to your personal website or social media platform. This helps to increase this website's
+            <a href="https://en.wikipedia.org/wiki/PageRank">Page Rank</a>.
+        </details>
+        <hr>
+        <details>
+            <summary class="far narrow">How was this website made?</summary>
+            Sometimes people overuse JavaScript frameworks, spending more time on building projects and forgetting the original purpose of the website: to deliver information. 
+            In fact, the logic of most personal websites is not even a little bit close to the complexity that necessitates large JavaScript frameworks.
+            So this website is constructed by vanilla HTML5, CSS3, and JavaScript (ES6), with the only assist of JavaScript library: <a href="http://splidejs.com">Splide</a>.
+            <!-- to comply the responsiveness and cross-browser compatibility design principal. -->
+            It's hosted on <a href="https://www.cloudflare.com/developer-platform/products/r2/">Cloudflare R2</a>. 
+        </details>
+        <hr>
+        <details>
+            <summary class="far narrow">What if I found a problem or glitch in the website?</summary>
+            Feel free to report problems of any kind, especially styling or device adapting problem to <a href="/cdn-cgi/l/email-protection#1d7c797074735d677572687174737a646833737869">administrator</a>.
+            You may also found this in the footer of this website. 
+            Thank you for making effort to improve the website.  
+        </details>
+      </div>
+    </div .row>
 
       <div style="width: 100%; padding: 0 1rem; box-sizing: border-box; text-align: center;">
-        <hr style="border: .25px solid #ddd;">
+        <hr>
         <p>
           &copy; Lingyu Zhou <span id="thisYear"></span>
           <!-- <br>
@@ -342,6 +403,7 @@ ul{margin:0}
 <script>thisYear.innerHTML=new Date().getFullYear();</script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="proj/proj.js"></script>
+<script src="js/fest.js"></script>
 </body>
 
 </html>
