--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ ul{margin:0}
         <p>
           <!-- <label for="region">Your region:</label> -->
 
-          <select name="region" id="region" style="font-family: inherit; background-color: var(--ac); color: var(--mc); border-radius: 5px;">
+          <select name="region" id="region" style="font-family: inherit; background-color: var(--ac); color: var(--mc); border-radius: 5px; border:1px solid #ddd">
             <option value="en-us">US (Default)</option>
             <option value="en-gb">UK</option>
             <option value="en-au">AU</option>
