--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@ ul{margin:0}
         document.documentElement.style.setProperty('--ac', getComputedStyle(document.documentElement).getPropertyValue('--ac')=== 'black' ? 'white' : 'black');
         document.documentElement.style.setProperty('--mc', getComputedStyle(document.documentElement).getPropertyValue('--mc')=== 'white' ? 'black' : 'white');" 
         style="cursor: pointer;">◐</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-          <span onclick="window.location.href='https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1'">Terms</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-          <span onclick="navigator.share({title:'Lingyu Zhou',text:`Lingyu Zhou's Homepage`,url:'https://xolyn.github.io'});">Share</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-          <span onclick="window.location.href='mailto:report@zly.vg'">Report</span>&nbsp;&nbsp;|&nbsp;&nbsp;
-          <span onclick="window.location.href='https://status.zhoulingyu.net'">Status</span>
+          <span style="cursor: pointer;" onclick="window.location.href='https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1'">Terms</span>&nbsp;&nbsp;|&nbsp;&nbsp;
+          <span style="cursor: pointer;" onclick="navigator.share({title:'Lingyu Zhou',text:`Lingyu Zhou's Homepage`,url:'https://xolyn.github.io'});">Share</span>&nbsp;&nbsp;|&nbsp;&nbsp;
+          <span style="cursor: pointer;" onclick="window.location.href='mailto:report@zly.vg'">Report</span>&nbsp;&nbsp;|&nbsp;&nbsp;
+          <span style="cursor: pointer;" onclick="window.location.href='https://status.zhoulingyu.net'">Status</span>
         </p>
         <div  style="margin: auto;"></div>
         <p style="display: flex;">
