--- a/proj/index.html
+++ b/proj/index.html
@@ -183,24 +183,10 @@
     </div>
 <script src='https://f.zly.vg/js/newurl.js'></script>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script> -->
+<script src="projson.js"></script>
 <script>
-    var allprojs=[]
-    const supabaseUrl = 'https://vuqcoijjybmcujzdybdi.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ1cWNvaWpqeWJtY3VqemR5YmRpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDI3OTA4NTIsImV4cCI6MjA1ODM2Njg1Mn0.HN4XbQDEg2pKhxgCCaZjFqI_FYExGV0QZIX0Gn5Tios';
-    const client  = supabase.createClient(supabaseUrl, supabaseKey);
-    async function fetchData() {
-  const { data, error } = await client
-    .from('projinfo')
-    .select('name, url, img, desc');
-
-  if (error) {
-    console.error('查询失败：', error);
-    return;
-  }
-  allprojs=data;
-
-  allprojs.forEach(proj => {
+  projs.forEach(proj => {
     var injection = document.createElement("div");
     injection.classList.add('proj')
     injection.innerHTML=`
@@ -216,7 +202,6 @@
     document.getElementById('inject').appendChild(injection);
 }
 )
-}
 
 window.onload = fetchData;
 
