--- a/widgets/index.html
+++ b/widgets/index.html
@@ -22,7 +22,7 @@
 
 :root{
 /* font-family: "zilla", serif; */
-font-family: "ahrefs";
+font-family: "passenger";
 /* font-family: Inter, sans-serif; */
 /* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
 -webkit-font-smoothing: antialiased;
@@ -311,8 +311,16 @@ select{
     Simply adding the js code above in your website. You can create a context menu that list all <code>h</code> elements 
     with hierarchical structure at the right bottom of your webpage! Easy as pie!</p>
 
-<center>
-    <img src="ctxmenu.png" style="width: 60%; aspect-ratio: initial;">
+    <b>
+        This context menu works robustly! No matter when you start with non-h1 elements, or already predefined class name for any h elemets.
+    </b>
+
+<center style="position: relative;">
+    <a href="./ctxdemo_all.html">
+        <img src="ctxmenu.png" style="width: 60%; margin-top: 1rem; aspect-ratio: initial;">
+    </a>
+    <!-- <a href="./ctxmenudemo.html" style="position: absolute; bottom: 0; right:30%; background-color: rgba(255,255,255,0.5); padding: .2rem;
+    backdrop-filter: blur(8px);-webkit-backdrop-filter: blur(8px);">See this demo &rarr;</a> -->
 </center>
 
 <div class="note">
