--- a/widgets/index.html
+++ b/widgets/index.html
@@ -349,7 +349,7 @@ button:hover{
 
 Simply adding the js code above in your website to use the new meZu2! 
 
-Inheriting the features and robustness of meZu, the context menu now can indicate the section you are in by highlighting! ..and with more aethestic-obeying animations!
+Inheriting the features and robustness of meZu, the context menu now can indicate the section you are in by highlighting! ..and with more aesthetically pleasing animations!
 
 <p><button onclick="location.href='./ctxdemo_all_2.html'">
     See a demo &rarr;
