--- a/widgets/index.html
+++ b/widgets/index.html
@@ -11,8 +11,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Liter&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
-<link href="https://db.onlinewebfonts.com/c/7b7a625024c0f39cbca2cf9674f51d94?family=General+Sans+Variable" rel="stylesheet">
-
 <!-- https://icons.getbootstrap.com/ -->
 <link rel="stylesheet" href="widgets.css">
 <title>gadgetz</title>
@@ -23,7 +21,7 @@
 
 :root{
 /* font-family: "zilla", serif; */
-font-family: "inter";
+font-family: "md";
 /* font-feature-settings: 'liga' 1, 'calt' 1, 'ccmp' 1;  */
 -webkit-font-smoothing: antialiased;
 /* font-size: smaller; */
@@ -334,7 +332,7 @@ button:hover{
     </a>
 </center> -->
 
-<p><button onclick="location.href='./ctxdemo_all_2.html'">
+<p><button onclick="location.href='./ctxdemo_all.html'">
     See a demo &rarr;
 </button></p>
 
