--- a/widgets/index.html
+++ b/widgets/index.html
@@ -111,7 +111,7 @@ button:hover{
             For customization purposes, contents inside do not have any pre-defined styles. <br>
         </p>
         <p>
-            For devices with a mouse: <span style="box-shadow: 1px 1px 1px; display: inline-block; background-color: rgb(242, 241, 241); padding: .3rem .6rem; border-radius: .5rem;">Shift</span> + wheel to scroll horizontally
+            For devices with a mouse: <span style="box-shadow: 1px 1px 1px; display: inline-block; background-color: rgb(242, 241, 241); padding: .15rem .3rem; border-radius: .5rem;">Shift</span> + wheel to scroll horizontally
         </p>
     </div>
 
@@ -303,12 +303,31 @@ button:hover{
     A small widget to help users better use the website, including 'back', 'to top', 'to bottom', 'home', 'refresh', and more..
 </p>
 
-<iframe src="./a11y-1.html" frameborder="0" style="width: 100%; border: 1px solid #bbb;"></iframe>
+<h4>
+    Square type
+</h4>
+<pre>
+&lt;script src="https://xolyn.github.io/widgets/a11y-s.js">&lt;/script>
+</pre>
+
+<center style="width: 100%;">
+    <img src="a11y-s.png" style="width: 100%; max-width: 700px;">
+</center>
 
 
-<p><i>
-    More types coming soon..
-</i></p>
+<!-- <iframe src="./a11y-1.html" frameborder="0" style="width: 100%; border: 1px solid #bbb;"></iframe> -->
+
+
+<h4>
+    Round type
+</h4>
+<pre>
+&lt;script src="https://xolyn.github.io/widgets/a11y-r.js">&lt;/script>
+</pre>
+
+<center style="width: 100%;">
+    <img src="a11y-r.png" style="width: 100%; max-width: 300px;">
+</center>
 
 <h3>
     Content menu
