--- a/material.html
+++ b/material.html
@@ -5,7 +5,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-<title>Document</title>
+<title>Reappear Material Design</title>
 <style>
     .material-symbols-outlined{
         transition: .15s; 
@@ -32,11 +32,13 @@
 
 }
 
-
+h1{
+    letter-spacing: -.5px;
+}
 
 </style>
 </head>
-<body style="margin: 2rem 8vw; font-size: 1.5vmax;">
+<body style="margin: 2rem 8vw; font-size: 1.5vmax; font-family: 'Google Sans Text';">
 <h1>Reappear Material Design</h1>
 <p>
     Since its debut in 2014 at Google I/O, Material Design has been Google's comprehensive design language aimed at bringing digital interfaces to life through tactile metaphors inspired by paper and ink. It emphasizes depth, lighting, motion, and bold typography to create intuitive and consistent experiences across Android, web, iOS, and beyond.
