--- a/material.html
+++ b/material.html
@@ -7,29 +7,24 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <title>Reappear Material Design</title>
 <style>
-    .material-symbols-outlined{
-        transition: .15s; 
-        cursor: pointer;
-        user-select: none;
-    }
+.material-symbols-outlined{
+    transition: .15s; 
+    cursor: pointer;
+    user-select: none;
+}
 .change:hover {
     background-color: #6F6198 !important;
     border-radius: 1rem !important;
 }
 
 .pill{
-    padding: .5rem;
-    border-radius: 99rem; 
-        transition: .15s; 
-        cursor: pointer;
-        margin: 0 .25rem;
+ padding: .5rem; border-radius: 99rem; transition: .15s; cursor: pointer; margin: 0 .25rem;
 
 }
 
 
 .pill:hover{
         background-color: #6F6198 !important;
-
 }
 
 h1{
