--- a/widgets/index.html
+++ b/widgets/index.html
@@ -329,6 +329,18 @@ button:hover{
     <img src="a11y-r.png" style="width: 100%; max-width: 300px;">
 </center>
 
+
+<h4>
+    Material design
+</h4>
+<pre>
+&lt;script src="https://xolyn.github.io/widgets/a11y-m.js">&lt;/script>
+</pre>
+
+<center style="width: 100%;">
+    <img src="a11y-m.gif" style="width: 100%; max-width: 300px;">
+</center>
+
 <h3>
     Content menu
 </h3>
@@ -366,9 +378,13 @@ button:hover{
 </pre>
 
 
-Simply adding the js code above in your website to use the new meZu2! 
-
+<p>
+    Simply adding the js code above in your website to use the new meZu2! Just like the one shown on the top of the this page!
+    </p>
+<p>
+    
 Inheriting the features and robustness of meZu, the context menu now can indicate the section you are in by highlighting! ..and with more aesthetically pleasing animations!
+</p>
 
 <p><button onclick="location.href='./ctxdemo_all_2.html'">
     See a demo &rarr;
