--- a/lexio/index.html
+++ b/lexio/index.html
@@ -38,6 +38,7 @@ button{
     padding: .5rem 1rem;
     font-family: inherit;
     cursor: pointer;
+    color: inherit;
     transition: .3s ease;
 }
 
