--- a/waterfall.html
+++ b/waterfall.html
@@ -4,69 +4,61 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
-<title>Document</title>
+<title></title>
+<style>
+#exp{font-size: xx-small; font-family: nhg;}
+h1,h2,h3,h4,h5{margin:1rem 0;}
+#show{margin: 1rem 0; max-width: 100%; overflow-x: auto;}
+#back:hover{
+  background-color:#eee;
+}
+hr{border: .5px solid #ddd; margin-top:0;}
+#wrapper{display: none;}
+#fontName::before, #fontName::after{
+  content: '"';
+  font-size: 'nhg';
+}
+</style>
 <script>
     window.onload = function() {
- if (!window.location.search.includes("?")) { document.body.innerHTML = ""; }
+ if (!window.location.search.includes("?")) { document.body.innerHTML = ""; window.location.href='about:blank'; }
+ else{
+    
       const params = new URLSearchParams(window.location.search);
       const font = params.get("font") || "sans-serif";
-
-      document.body.style.fontFamily = decodeURIComponent(font);
+        document.title=`Preview: ${font}`
+      document.body.style.fontFamily = font;
       fontName.innerHTML = font;
+      wrapper.style.display='block';
+    }
     };
   </script>
-<style>
-p{margin: 1rem 0; 
- /* max-width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; */
-}
 
-button{all:unset; background-color: rgba(255,255,255,0); backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px); color: white;}
-button:hover{
-  background-color: rgba(255,255,255,.4)
-}
-
-@media (orientation: landscape) {
-#por{display: none;}
-}
-.noof{max-width: 100%;
-  white-space: nowrap;      /* 不允许换行 */
-overflow: hidden;         /* 超出容器就隐藏 */
-text-overflow:clip;  /* 超出的用省略号显示 */}
-</style>
 </head>
-<body style="margin: 0;">
+<body style="background-color: #fff; margin: 2rem;">
 
-<div style="background-color: black; height: 20dvh;">
+<div id='wrapper' style="margin: auto; width: 100%; box-sizing: border-box;">
+<div id="exp" style="display: flex; font-size: medium;"><div id="back" onclick="history.back()" style=" transition:.3s; border-radius: 5px; cursor: pointer; padding: 2px 5px; margin: auto 0; margin-left: -5px; font-family: inter;">&larr;</div><div style="margin: 0 auto;"></div>
+<div style="margin: auto 0;" id="fontName"></div>
 </div>
+<div id="show"><div id="exp">H1&nbsp;&CenterDot;&nbsp;20vmin&nbsp;&CenterDot;&nbsp;BOLD&nbsp;&CenterDot;&nbsp;LS 0px</div><hr><h1 style="letter-spacing: 0px; font-size: 20vmin;">Sojourn</h1></div>
+<!-- <div id="show"><div id="exp">H2&nbsp;40px&nbsp;2.125rem</div><hr><h2 style="font-size: 7vmax;"></h2></div>
+<div id="show"><div id="exp">H3&nbsp;30px&nbsp;2.125rem</div><hr><h3 style="font-size: 6vmax;">Juxtapose</h3></div>
+<div id="show"><div id="exp">H4&nbsp;20px&nbsp;2.125rem</div><hr><h4 style="font-size: 5vmax;">Ramification</h4></div> -->
+<div id="show"><div id="exp">EM&nbsp;&CenterDot;&nbsp;15vmin&nbsp;&CenterDot;&nbsp;NORMAL&nbsp;&CenterDot;&nbsp;LS 0px</div><hr><em style="letter-spacing: 0px; font-size: 15vmin;">Ramification</em></div>
 
-<nav style="display: flex; position: sticky; top:0; height:5dvh; padding: 1rem; background-color: black;">
-  <button onclick="history.back()" style="transition:.3s; border-radius: 10px; cursor: pointer; padding: .5em 1rem; margin: auto 0; font-family: inter;">&larr;</button>
-  <div id="fontName" style="margin: auto 0 auto auto; font-weight: normal; display: inline-block; color:white; font-family: inter;">Karla</div>
-</nav>
+<div id="show"><div id="exp">P&nbsp;&CenterDot;&nbsp;6vmin&nbsp;&CenterDot;&nbsp;NORMAL&nbsp;&CenterDot;&nbsp;LS -.5px</div><hr>
+<p style=" letter-spacing: -.5px;font-size: 6vmin;">
+I rejoiced greatly in the Lord that at last you renewed your concern for me. Indeed, you were concerned, but you had no opportunity to show it. I am not saying this because I am in need, for I have learned to be content whatever the circumstances.
+</p>
 
-<div id="por" style="font-family: inter;padding: 3rem 2rem 0 2rem; box-sizing: border-box; color: gray;">
-  Get better visual effects on horizontal (landscape) display devices.
+<p style=" letter-spacing: -.5px;font-size: 6vmin;">
+I know what it is to be in need, and I know what it is to have plenty. I have learned the secret of being content in any and every situation, whether well fed or hungry, whether living in plenty or in want. I can do all this through him who gives me strength.
+</p>
 </div>
+<div id="show"><div id="exp">FOOTNOTE&nbsp;&CenterDot;&nbsp;2.5vmin&nbsp;&CenterDot;&nbsp;NORMAL&nbsp;&CenterDot;&nbsp;LS 0px</div><hr><footer style="letter-spacing: 0px; font-size: 2.5vmin;">&copy; Copyright 2025 Lingyu Zhou</footer></div>
 
-<div id="main" style="padding: 2rem; box-sizing: border-box;"></div>
-
-<script>
-    const text = "The quick brown fox jumps over the lazy dog.";
-    const maxSize = '5'; 
-    const minSize = '1'; 
-    const step = .1;      
-
-    for (let size = maxSize; size >= minSize; size -= step) {
-      const p = document.createElement("p");
-      p.textContent = text;
-      p.classList.add('noof');
-      p.style.fontSize = size + "vmax";
-      document.getElementById('main').appendChild(p);
-    }
-</script>
+</div>
 
 </body>
 </html>
